--- a/withdrawal-settings.html
+++ b/withdrawal-settings.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Withdrawal Settings - Admin</title>
-    <link rel="stylesheet" href="../css/admin.css">
+    <link rel="stylesheet" href="css/admin.css">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
     <style>
         .input-with-button {
@@ -91,7 +91,7 @@
 
     <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-app-compat.js"></script>
     <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-database-compat.js"></script>
-    <script src="../script/firebase-config.js"></script>
-    <script src="../script/withdrawal-settings.js"></script>
+    <script src="script/firebase-config.js"></script>
+    <script src="script/withdrawal-settings.js"></script>
 </body>
 </html>
