--- a/login.html
+++ b/login.html
@@ -2,57 +2,95 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Login – Camplus Wallet</title>
-  <link rel="stylesheet" href="css/login.css">
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600&display=swap" rel="stylesheet">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Welcome – Camplus Wallet</title>
+  <link
+    href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600&display=swap"
+    rel="stylesheet"
+  />
+  <link
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
+    integrity="sha512-9usAa10IRO0HhonpyAIVpjrylPvoDwiPUiKdWk5t3PyolY1cOd4DSE0Ga+ri4AuTroPR5aQvXU9xC6qOPnzFeg=="
+    crossorigin="anonymous"
+    referrerpolicy="no-referrer"
+  />
+  <!-- Link to external stylesheet -->
+  <link rel="stylesheet" href="css/login.css" />
 </head>
 <body>
-  <div class="login-container">
-    <div class="login-box">
-      <div class="login-header">
-        <h1 id="formTitle">Login</h1>
-        <p>Welcome back to Camplus Wallet</p>
+  <div class="page-container">
+    <!-- Left Info Panel -->
+    <div class="info-panel">
+      <svg class="logo" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor">
+        <path stroke-linecap="round" stroke-linejoin="round" d="M21 12a2.25 2.25 0 00-2.25-2.25H15a3 3 0 11-6 0H5.25A2.25 2.25 0 003 12m18 0v6a2.25 2.25 0 01-2.25 2.25H5.25A2.25 2.25 0 013 18v-6m18 0V9M3 12V9m12 6H9" />
+      </svg>
+      <h2>Camplus Wallet</h2>
+      <p>The smart, simple, and secure way to manage your campus funds.</p>
+    </div>
+
+    <!-- Right Form Panel -->
+    <div class="form-panel">
+      <div class="form-box">
+        <div class="form-header">
+          <h1 id="formTitle">Login</h1>
+          <p>Welcome back! Please enter your details.</p>
+        </div>
+
+        <!-- Container for displaying success or error messages -->
+        <div id="messageContainer" class="message-container" aria-live="polite"></div>
+
+        <form id="loginForm" novalidate>
+          <div class="input-group">
+            <label for="loginUid">Phone Number</label>
+            <div class="input-wrapper">
+              <i class="fas fa-phone input-icon-prefix"></i>
+              <input type="tel" id="loginUid" placeholder="Enter your phone number" autocomplete="username" required />
+            </div>
+          </div>
+          <div class="input-group">
+            <label for="loginPass">Password</label>
+            <div class="input-wrapper">
+              <i class="fas fa-lock input-icon-prefix"></i>
+              <input type="password" id="loginPass" placeholder="Enter your password" autocomplete="current-password" required />
+            </div>
+          </div>
+          <button type="submit" id="loginBtn" class="submit-btn">
+            <span class="btn-text">Login</span>
+            <div class="spinner hidden"></div>
+          </button>
+          <p class="form-switcher">Don't have an account? <button type="button" class="link-btn" id="showRegisterLink">Register</button></p>
+        </form>
+
+        <form id="registerForm" class="hidden" novalidate>
+          <div class="input-group">
+            <label for="regName">Full Name</label>
+            <div class="input-wrapper">
+              <i class="fas fa-user input-icon-prefix"></i>
+              <input type="text" id="regName" placeholder="Enter your full name" autocomplete="name" required />
+            </div>
+          </div>
+          <div class="input-group">
+            <label for="regPhone">Phone Number</label>
+            <div class="input-wrapper">
+              <i class="fas fa-phone input-icon-prefix"></i>
+              <input type="tel" id="regPhone" placeholder="Enter a 10-digit number" autocomplete="tel" required />
+            </div>
+          </div>
+          <div class="input-group">
+            <label for="regPass">Set a Password</label>
+            <div class="input-wrapper">
+              <i class="fas fa-lock input-icon-prefix"></i>
+              <input type="password" id="regPass" placeholder="Create a strong password" autocomplete="new-password" required />
+            </div>
+          </div>
+          <button type="submit" id="registerBtn" class="submit-btn">
+            <span class="btn-text">Register</span>
+            <div class="spinner hidden"></div>
+          </button>
+          <p class="form-switcher">Already have an account? <button type="button" class="link-btn" id="showLoginLink">Login</button></p>
+        </form>
       </div>
-
-      <!-- Container for displaying success or error messages -->
-      <div id="messageContainer" class="message-container"></div>
-
-      <form id="loginForm" novalidate>
-        <div class="input-group">
-          <label for="loginUid">Phone Number</label>
-          <input type="tel" id="loginUid" placeholder="Enter your phone number" autocomplete="username" required />
-        </div>
-        <div class="input-group">
-          <label for="loginPass">Password</label>
-          <input type="password" id="loginPass" placeholder="Enter your password" autocomplete="current-password" required />
-        </div>
-        <button type="submit" id="loginBtn" class="submit-btn">
-          <span class="btn-text">Login</span>
-          <div class="spinner hidden"></div>
-        </button>
-        <p class="form-switcher">Don't have an account? <button type="button" class="link-btn" id="showRegisterLink">Register</button></p>
-      </form>
-
-      <form id="registerForm" class="hidden" novalidate>
-        <div class="input-group">
-          <label for="regName">Full Name</label>
-          <input type="text" id="regName" placeholder="Enter your full name" autocomplete="name" required />
-        </div>
-        <div class="input-group">
-          <label for="regPhone">Phone Number</label>
-          <input type="tel" id="regPhone" placeholder="Enter a 10-digit number" autocomplete="tel" required />
-        </div>
-        <div class="input-group">
-          <label for="regPass">Set a Password</label>
-          <input type="password" id="regPass" placeholder="Create a strong password" autocomplete="new-password" required />
-        </div>
-        <button type="submit" id="registerBtn" class="submit-btn">
-          <span class="btn-text">Register</span>
-          <div class="spinner hidden"></div>
-        </button>
-        <p class="form-switcher">Already have an account? <button type="button" class="link-btn" id="showLoginLink">Login</button></p>
-      </form>
     </div>
   </div>
 
